📝 docs: fix some accessibility issues: links not being underlined and contrast of copyright notice

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -2,3 +2,12 @@
  Here in case we want to modify the style of the chosen theme.
  Try not to do too much here or it might become difficult to maintain.
  */
+/* Underline all links in the content area */
+.md-content a {
+    text-decoration: underline;
+}
+
+.md-copyright {
+    /* Set your desired background color */
+    color: grey;
+}
